--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
               center: [39.7475179,-89.1118162],
               zoom: 7
           });
-// basemap
-        // var antique = L.tileLayer('https://cartocdn_{s}.global.ssl.fastly.net/base-antique/{z}/{x}/{y}.png', {
-        //    attribution: 'Map tiles by Carto, under CC BY 3.0. Data by OpenStreetMap, under ODbL.',
-        //    maxZoom: 11,
-        //    minZoom: 3
-        //  }).addTo(map);
-
-         var watercolor = L.tileLayer('http://tile.stamen.com/watercolor/{z}/{x}/{y}.png', {
-             attribution: 'Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under ODbL.',
-             maxZoom: 11,
-             minZoom: 3
+basemap
+        var antique = L.tileLayer('https://cartocdn_{s}.global.ssl.fastly.net/base-antique/{z}/{x}/{y}.png', {
+           attribution: 'Map tiles by Carto, under CC BY 3.0. Data by OpenStreetMap, under ODbL.',
+           maxZoom: 11,
+           minZoom: 3
          }).addTo(map);
+
+         // var watercolor = L.tileLayer('http://tile.stamen.com/watercolor/{z}/{x}/{y}.png', {
+         //     attribution: 'Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under ODbL.',
+         //     maxZoom: 11,
+         //     minZoom: 3
+         // }).addTo(map);
 
 
 
