--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               center: [39.7475179,-89.1118162],
               zoom: 7
           });
-basemap
+// basemap
         var antique = L.tileLayer('https://cartocdn_{s}.global.ssl.fastly.net/base-antique/{z}/{x}/{y}.png', {
            attribution: 'Map tiles by Carto, under CC BY 3.0. Data by OpenStreetMap, under ODbL.',
            maxZoom: 11,
