--- a/index.html
+++ b/index.html
@@ -201,78 +201,13 @@
                   };
                }
 
-               // function style_Tribes(feature){
-               //     return {
-               //         color: TribeColors(feature.properties.ID),
-               //         weight: 4,
-               //         opacity: 1,
-               //         // color: 'darkgray',
-               //         // fillOpacity: .5,
-               //       };
-               //    }
-
-
-    //
-    //   function highlightFeature(e) {
-    //       // Get access to the feature that was hovered through e.target
-    //       var feature = e.target;
-    //
-    //       // Set a thick grey border on the feature as mouseover effect
-    //       // Adjust the values below to change the highlighting styles of features on mouseover
-    //       // Check out https://leafletjs.com/reference-1.3.4.html#path for more options for changing style
-    //       feature.setStyle({
-    //           weight: 5,
-    //           color: '#FFFFFF',
-    //           fillOpacity: 0.7
-    //       });
-    //
-    //       // Bring the highlighted feature to front so that the border doesn’t clash with nearby states
-    //       // But not for IE, Opera or Edge, since they have problems doing bringToFront on mouseover
-    //       if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
-    //           feature.bringToFront();
-    //       }
-    //   }
-    //
-    //   var aceneg; // define a variable to make the geojson layer accessible for the funtion to use
-    //   var monfis; //2nd variable
-    //
-    //   function resetHighlight(e) {
-    //       aceneg.resetStyle(e.target), monfis.resetStyle(e.target);
-    //   }
-    //
-    //   function onEachFeature(feature, layer) {
-    // layer.on({
-    //     mouseover: highlightFeature, // Do what defined by the highlightFeature function on mouseover
-    //     mouseout: resetHighlight,    // Do what defined by the resetHighlight function on mouseout
-//     // });
-// }
-
-
+          
     aceneg = L.geoJson(Species_by_County,{
           style:style_aceneg,
           // onEachFeature: onEachFeature
         }).bindTooltip(function (layer){
           return layer.feature.properties.NAME + ' County'
           }).addTo(map);
-
-              // var covidlegend = L.control({position: 'bottomleft'}); // Try the other three corners if you like.
-              //
-              // covidlegend.onAdd = function (map) {
-              //
-              // var div = L.DomUtil.create('div', 'legend'),
-              // grades = [0, 1, 2, 3, 4, 5, 6]; // The break values to define the intervals of population, note we begin from 0 here
-              // div.innerHTML = '<b>Percentage Tested Positive <br>for Covid 19 <br></b>'; // The legend title (HTML-based)
-              //
-              // // Loop through all the classes and generate a label with a color box for each interval.
-              // // If you are creating a choropleth map, you DO NOT need to change lines below.
-              // for (var i = 0; i < grades.length; i++) {
-              // div.innerHTML +=
-              // '<i style="background:' + getColor(grades[i] + 1) + '"></i>' +
-              // grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
-              // }
-              //
-              // return div;
-              // };
 
         acesai = L.geoJson(Species_by_County,{
         style:style_acesai,
@@ -345,18 +280,32 @@ Tribes = L.geoJson(Tribes,{
     return layer.feature.properties.Name
     }).addTo(map);
 
-    //
-    //
-    //
-    // Richmond = L.geoJson(Richmond).addTo(map);
-    //
-    //   Richmond.bindPopup('<p style="color:Black"> <b>Richmond, VA</b> <br> State Capital </p>');
+
+
+    var legend = L.control({position: 'bottomleft'});
+    legend.onAdd = function (map) {
+
+    var div = L.DomUtil.create('div', 'legend');
+    div.innerHTML = '<strong>Categories</strong><br>';
+    var categories = ['Present','Not Present'];
+    var yesno = [1,0];
+
+    for (var i = 0; i < categories.length; i++) {
+
+            div.innerHTML +=
+
+                '<i class="square" style="background:' + getColor(yesno[i]) + '"></i> ' +
+            categories[i] + '<br>';
+
+        }
+
+    return div;
+    };
+    legend.addTo(map);
 
 
 
-              //
-              // covidlegend.addTo(map);
-              // popdenlegend.addTo(map);
+
 
               var basemaps = {
               // "Terrain Raster": terrain2,
@@ -367,9 +316,9 @@ Tribes = L.geoJson(Tribes,{
               "<i>Asclepias syriaca - Common Milkweed</i>": ascsyr,
               "<i>Cicuta maculata - Water Hemlock</i>": cicmac,
               "<i>Geranium maculatum - Wild Geranium</i>": germac,
-              "<i>Hypericum perforatum - St John's Wort</i>": hypper_NNa,
+              "<i>*Hypericum perforatum - St John's Wort</i>": hypper_NNa,
               "<i>Monarda fistulosa - Wild Bergamot</i>": monfis,
-              "<i>Nepeta cataria - Catnip</i>": nepcat_NNa,
+              "<i>*Nepeta cataria - Catnip</i>": nepcat_NNa,
               "<i>Podophyllum peltatum - Mayapple</i>": podpel,
               "<i>Populus deltoides - Eastern Cottonwood</i>": popdel,
 
@@ -381,35 +330,6 @@ Tribes = L.geoJson(Tribes,{
              };
 
              L.control.layers(basemaps, overlays).addTo(map);
-
-                       // // Removing the legend when the layer is removed
-                       // map.on('overlayremove', function(eventLayer){
-                       //   if (eventLayer.name == 'Percentage of Positive Cases'){ // We use the key/display name to refer to the layer
-                       //     map.removeControl(covidlegend); // legend is the variable name of the layer legend
-                       //   }
-                       // });
-                       //
-                       // // Adding the legend when the layer is added
-                       // map.on('overlayadd', function(eventLayer){
-                       //   if (eventLayer.name == 'Percentage of Positive Cases'){
-                       //     covidlegend.addTo(map);
-                       //   }
-                       // });
-                       //
-                       //
-                       // map.on('overlayremove', function(eventLayer){
-                       //   if (eventLayer.name == 'Population Density'){ // We use the key/display name to refer to the layer
-                       //     map.removeControl(popdenlegend); // legend is the variable name of the layer legend
-                       //   }
-                       // });
-                       //
-                       // // Adding the legend when the layer is added
-                       // map.on('overlayadd', function(eventLayer){
-                       //   if (eventLayer.name == 'Population Density'){
-                       //     popdenlegend.addTo(map);
-                       //   }
-                       // });
-
 
 
         </script>
