--- a/index.html
+++ b/index.html
@@ -25,24 +25,37 @@
         <script type="text/javascript" src="Species_by_County.js"></script>
         <script type="text/javascript" src="Tribes.js"></script>
 
+          <link href='https://fonts.googleapis.com/css?family=Alef' rel='stylesheet'>
+
         <style>
           /* Optional: adjust the values below to change the appearance of the legend */
           .legend {
-              padding: 6px 8px;
-              line-height: 18px;
-              background: rgba(255,255,255,0.9);
+              padding: 10px 12px;
+              line-height: 34px;
+              background: rgba(152, 155, 150,0.9);
               box-shadow: 0 0 15px rgba(0,0,0,0.2);
-              border-radius: 5px;
+              border-radius: 9px;
           }
 
            /* Optional: adjust the values below to change the appearance of the legend color boxes */
            .legend i {
-              width: 18px;
-              height: 18px;
+              width: 30px;
+              height: 30px;
               float: left;
-              margin-right: 8px;
+              margin-right: 10px;
               opacity: 0.7;
           }
+
+
+          .title {
+            padding: 6px 8px;
+            font-family: 'Alef';font-size: 22px;
+            background: grey;
+            background: rgba(152,155,150,0.8);
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            border-radius: 5px;
+        }
+
         </style>
 
     </head>
@@ -201,7 +214,7 @@
                   };
                }
 
-          
+
     aceneg = L.geoJson(Species_by_County,{
           style:style_aceneg,
           // onEachFeature: onEachFeature
@@ -304,7 +317,15 @@ Tribes = L.geoJson(Tribes,{
     legend.addTo(map);
 
 
+    var title = L.control({position: 'topright'}); // position of the title
 
+         title.onAdd = function (map) {
+             this._div = L.DomUtil.create('div', 'title'); // create a div with a class "title"
+             this._div.innerHTML = "<h3>Range of Species by county <br> & Tribal Ranges, Illinois</h3>";  // Title text, may use html to customize
+             return this._div;
+         };
+
+          title.addTo(map);
 
 
               var basemaps = {
@@ -320,7 +341,7 @@ Tribes = L.geoJson(Tribes,{
               "<i>Monarda fistulosa - Wild Bergamot</i>": monfis,
               "<i>*Nepeta cataria - Catnip</i>": nepcat_NNa,
               "<i>Podophyllum peltatum - Mayapple</i>": podpel,
-              "<i>Populus deltoides - Eastern Cottonwood</i>": popdel,
+              "<i>Populus deltoides - Eastern Cottonwood <br><br> * denotes an introduced species</i>": popdel,
 
              };
 
@@ -329,7 +350,10 @@ Tribes = L.geoJson(Tribes,{
 
              };
 
-             L.control.layers(basemaps, overlays).addTo(map);
+             L.control.layers(basemaps, overlays, {collapsed:false}).addTo(map);
+
+
+
 
 
         </script>
