--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Tribes = L.geoJson(Tribes,{
 
          title.onAdd = function (map) {
              this._div = L.DomUtil.create('div', 'title'); // create a div with a class "title"
-             this._div.innerHTML = "<h3>Range of Species by county <br> & Tribal Ranges, Illinois</h3>";  // Title text, may use html to customize
+             this._div.innerHTML = "<h3>Range of medicinal plants, by county <br> & Tribal Ranges, Illinois</h3>";  // Title text, may use html to customize
              return this._div;
          };
 
